Add version details in remote index path file with code enhancements (#13386)
Signed-off-by: Ashish Singh <ssashish@amazon.com>